@@ -1,7 +1,8 @@
 Release 0.9.2 (January 8, 2014)
 ============
 
-* FIX: DataFind was broken due to a typo
+* FIX: DataFinder was broken due to a typo
+* FIX: Order of DataFinder outputs was not guaranteed, it's human sorted now
 
 Release 0.9.1 (December 25, 2013)
 ============
